2006-09-12 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* added support for reading volumelabels. Atm we only read ext2/3, but
	  the infrastructure for adding the other filesystems is in place.
	  It's simply a matter of finding the right commands and parsing the
	  output. (see #338528 for more info)

2006-09-11 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* configure.in: bumped to gparted-0.3.1
	  ===================================================

2006-09-11 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/GParted_Core.cc: show correct statusmessage when performing the
	  readonly test.

2006-09-11 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/GParted_Core.cc: reverted back to parted probing after i heard
	  patches to fix some issues with it are underway. (skipping of floppy
	  and cdrom)
	* src/reiser4.cc,
	  src/reiserfs.cc: added --quiet to the fschecks to prevent the
	  detailswindow from dying under the load. I should find a solution
	  for that anyway.

2006-09-10 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/GParted_Core.cc: display total sector info in copy_filesystem()

2006-09-10 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/Dialog_Progress.cc: make sure progressfraction stays between 0.0
	  and 1.0
	* include/GParted_Core.h,
	  src/GParted_Core.cc: implemented rollback in case of failed move of
	  overlapping filesystems. Together with the readonly test moving
	  should be quite save now :)

2006-09-09 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/fat16.cc,
	  src/fat32.cc: return true if filesystem was succesfully modified by
	  dosfsck.

2006-09-09 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* include/Dialog_Progress.h,
	  src/Dialog_Progress.cc: Show number of warnings after all operations
	  are completed. Also urge people to save their details in case of
	  error.

2006-09-09 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* include/Frame_Resizer_Base.h,
	  src/Frame_Resizer_Base.cc,
	  src/Frame_Resizer_Extended.cc,