@@ -1,3 +1,9 @@
+2006-09-13 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
+	* include/GParted_Core.h,
+	  src/GParted_Core.cc: finally fixed problem with 'disappearing'
+	  devicenodes by using udevsettle (#352744)
+
 2006-09-12 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
 	* added support for reading volumelabels. Atm we only read ext2/3, but
